[package]
name = "trains-yew-svg"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
yew = { version = "0.13", features = ["web_sys"] }
wasm-bindgen = "0.2.58"
wee_alloc = "0.4.5"
